# gmail-cleanup

./: .env.example  .gitignore  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
apps/: __init__.py
apps/api/: README.md  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users_and_google_accounts.py
apps/api/app/: auth.py  db.py  main.py  models.py  oauth.py  security.py  settings.py
apps/api/app/schemas/: messages.py
apps/api/app/services/: account_messages_service.py  gmail_client.py
apps/web/: README.md  package-lock.json  package.json  playwright.config.ts
apps/web/src/app/accounts/: page.tsx
apps/web/src/app/api/: _proxy.ts
apps/web/tests/e2e/: accounts-messages.spec.ts
codex/tasks/: 001_repo_hygiene.md  002_scaffold_structure.md  003_core_service_layer.md  004_fastapi_oauth_accounts.md  005_api_tests.md  005_nextjs_accounts_ui.md  007_readme_normalization.md  008_message_listing_stage_a.md  009_message_listing_stage_b.md  010_nextjs_proxy_messages.md  011_ui_account_messages.md  012_playwright_e2e_mode_a.md  013_task_runner_taskfile.md
docs/: architecture.md  development-plan.md  security.md
gmail_cleanup/: cli.py  config.py  exporter.py  gmail.py  gmail_iter.py  label_clear.py  labels.py  preview.py  query_builder.py  stats.py  trash.py
tests/: conftest.py
tests/api/: conftest.py  test_account_messages.py  test_account_messages_service.py  test_accounts.py  test_oauth_callback_state.py  test_oauth_start.py  test_security.py  test_settings.py
tests/core/: test_operations.py
(+7 files in other folders)
